--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="author" content="Naina Gupta">
     <link rel="stylesheet" href="style.css">
 </head>
-<!-- <script type="text/javascript" src="script.js"></script> -->
+<script type="text/javascript" src="script.js"></script>
 
 <body>
-    <!-- <center> -->
-    <h1>Ball fighter game</h1>
-    <canvas id="myCanvas"></canvas>
-    <!-- </center> -->
+    <center>
+        <h1>Ball fighter game</h1>
+        <canvas id="myCanvas"></canvas>
+        <h3>USE RIGHT ARROW KEY/MOUSE TO REACH GEM</h3>
+        <script src="script.js"></script>
+
+    </center>
 
 </body>
-<script src="jquery.js"></script>
-<script src="script.js"></script>
-
 
 </html>
